ros2_ws/log/build_2023-04-19_11-59-38/Walle_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/walle_pkg/turtlebot_player_client.py", line 3
    from import nameFile,nameFileResponse
         ^^^^^^
SyntaxError: invalid syntax

Sorry: IndentationError: expected an indented block after 'if' statement on line 39 (robot_player_cliente.py, line 40)
  File "/home/juan/The_WALL-E_project/ros2_ws/install/Walle_pkg/lib/python3.10/site-packages/Walle_pkg/turtlebot_player_client.py", line 5
    from  import *
          ^^^^^^
SyntaxError: invalid syntax

error: can't copy 'resource/walle_pkg': doesn't exist or not a regular file
